# neurova

./: .!12016!GPU_QUICKSTART.md  .!12017!DEVICE_SELECTION_GUIDE.md  .!12018!SETUP_CHECKLIST.md  .!12049!PUBLISHING_STEPS.md  .!13813!DEVICE_QUICK_REFERENCE.md  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVICE_QUICK_REFERENCE.md  DEVICE_SELECTION_GUIDE.md  DOCS_INDEX.md  GETTING_STARTED.md  INSTALLATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUBLISHING_STEPS.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_CHECKLIST.md  SUPPORT.md  check_nvc_coverage.py  check_pypi_size.py  cleanup_files.py  feature_audit.py  pyproject.toml  rebuild_cpp.sh  setup.py  setup_native.py  show_structure.sh  verify_cpp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
api-reference/api/: core.rst  dnn.rst
api-reference/source/: conf.py  getting_started.rst  index.rst
cmake/: FindNeurovaCUDA.cmake  FindNeurovaIPP.cmake  FindNeurovaMKL.cmake  FindNeurovaMetal.cmake  FindNeurovaOpenBLAS.cmake  FindNeurovaOpenCL.cmake  FindNeurovaTBB.cmake  FindNeurovaVulkan.cmake  NeurovaCompilerFlags.cmake  NeurovaDependencies.cmake  NeurovaUtils.cmake
doc/: Doxyfile  mainpage.dox
doc/api/: dnn.rst  imgproc.rst
doc/source/: conf.py  getting_started.rst  index.rst
examples/: README.py  chapter_01_getting_started.py  chapter_02_image_transforms.py  chapter_03_filters.py  chapter_04_features.py  chapter_05_detection.py  chapter_06_face.py  chapter_07_machine_learning.py  chapter_08_neural_networks.py  chapter_09_datasets.py  chapter_10_video.py  chapter_11_segmentation.py  chapter_12_gpu_performance.py  choose_device_simple.py  gpu_acceleration_demo.py  object_detection_example.py
examples/cpp/: image_processing_demo.cpp  object_detection_demo.cpp
examples/face_recognition_project/: 01_collect_faces.py  02_prepare_dataset.py  03_train_model.py  04_evaluate_model.py  05_test_webcam.py  README.md  config.py  detect_face_live.py  pipeline.py
examples/object_detection_project/: 01_annotate_images.py  02_prepare_dataset.py  03_train_detector.py  04_evaluate_detector.py  05_test_webcam.py  README.md  config.py  pipeline.py
examples/python/: face_detection_demo.py
guides/: ADVANCED_QUICKREF.md  ARCHITECTURE.md  CPP_100_PERCENT_COVERAGE.md  DOCS_INDEX.md  PUBLISHING_STEPS.md
guides/cpp-build-docs/: README_ADVANCED.md  README_ARCHITECTURE.md  README_COMPLETE.md  README_CPP_CORE.md  README_CPP_MODULES.md  README_EXTENDED.md  README_EXTENDED_CPP.md  README_HYBRID.md  README_MEGA.md
guides/user-guide/: GETTING_STARTED.md  GPU_QUICKSTART.md  QUICKSTART.md  SETUP_CHECKLIST.md
include/: neurova.hpp
include/neurova/: architectures.hpp  augmentation.hpp  calibration.hpp  core.hpp  face.hpp  features.hpp  filters.hpp  highgui.hpp  imgproc.hpp  io.hpp  ml.hpp  morphology.hpp  neural.hpp  neurova.hpp  nn.hpp  object_detection.hpp  photo.hpp  segmentation.hpp  solutions.hpp  stitching.hpp  timeseries.hpp  transform.hpp  utils.hpp  video.hpp
models/: README.md
models/classification/: mobilenet_v2.yaml
models/detection/: nvdetect_nano.yaml  yolov8n.yaml
models/face/: yunet.yaml
models/shaders/: dnn_shaders.json  imgproc_shaders.json
my_detection_dataset/: data.yaml
neurova/: __init__.py  _cpp_loader.py  cpp_core.py  datasets.py  device.py  gpu_utils.py  hybrid.py  nvc.py  py.typed  utils_cpp.py  version.py  video.py
neurova/accel/: __init__.py  cuda_native.cpp
neurova/architecture/: __init__.py  base.py  cnn.py  cnn_advanced.py  foundational.py  generative.py  graph.py  mlp.py  reinforcement.py  rnn.py  specialized.py  transformer.py  transformer_advanced.py  tuning.py  utils.py
neurova/augmentation/: __init__.py  color.py  functional.py  geometric.py  transforms.py
neurova/calibration/: __init__.py  pose.py
neurova/core/: __init__.py  array_ops.py  color.py  constants.py  dtypes.py  errors.py  image.py  ops.py
neurova/data/: __init__.py  dataloader.py  datasets.py
neurova/detection/: __init__.py  haar_cascade.py  haar_legacy.py  hog.py  template.py
neurova/dnn/: __init__.py
neurova/face/: __init__.py  blazeface_detector.py  dataset.py  detector.py  haar_loader.py  haar_native.cpp  recognizer.py  tflite_detector.py  trainer.py  utils.py
neurova/features/: __init__.py  corners.py  descriptors.py  detectors.py  keypoints.py  matching.py  types.py
neurova/filters/: __init__.py  bilateral.py  blur.py  convolution.py  edges.py  kernels.py
neurova/highgui/: __init__.py  _matplotlib_backend.py  _tk_backend.py
neurova/imgproc/: __init__.py  color.py  connected.py  contours.py  corners.py  drawing.py  geometric.py  histogram.py  hough.py  pyramid.py  segmentation.py  template.py  threshold.py
neurova/io/: __init__.py  codecs_extra.cpp  codecs_native.cpp  codecs_webp.cpp  readers.py  writers.py
neurova/ml/: __init__.py  classification.py  clustering.py  dimensionality.py  ensemble.py  feature_selection.py  gaussian_process.py  imputation.py  metrics.py  model_selection.py  pipeline.py  preprocessing.py  regression.py  stats.py  svm.py
neurova/morphology/: __init__.py  binary.py  morph_ops.py
neurova/neural/: __init__.py  conv.py  functional.py  layers.py  losses.py  model_zoo.py  module.py  (+2 more)
proto/: neurova_graph.fbs  neurova_imgcodecs.proto  neurova_model.proto  neurova_tensor.fbs
src/: core.cpp  neurova_advanced.cpp  neurova_architecture.cpp  neurova_extended.cpp  neurova_final.cpp  neurova_mega.cpp  neurova_minimal.cpp  neurova_timeseries.cpp  neurova_utils.cpp
tests/: __init__.py  benchmark_gpu.py  neurova_overall_test.py  run_all_tests.py  test_advanced.py  test_architecture.py  test_architecture_phase2.py  test_augmentation.py  test_deep_learning.py  test_device_management.py  test_filters.py  test_io_roundtrip.py  test_ml.py  test_morphology_binary.py  test_neural.py  test_new_features.py  test_new_modules.py  test_nvc.py  test_nvc_filters.py  test_phase1_check.py  test_segmentation_threshold.py  test_timeseries.py
(+177 files in other folders)
